# website

./: Cargo.toml  calc_explanation.html  explanation.md  index.html
.github/workflows/: rust.yml
src/: base_conversion.rs  calculator.rs  home.rs  main.rs  util.rs
styles/: main.scss
