[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.0-rc2", features = ["csr", "nightly"] }
math = { git = "https://github.com/Xterminate1818/math.git"}
markdown = "1.0.0-alpha.14"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
