[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5", features = ["csr", "nightly"] }
leptos-use = { version = "0.7", features = ["storage"]}
leptos_router = { version = "0.5", features = ["csr"] }
math = { git = "https://github.com/Xterminate1818/math.git"}
markdown = "1.0.0-alpha.14"
based = { path="../based/" }
log = "0.4"
console_log = "1.0"
serde = "1.0"
num-traits = "0.2"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
